--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Pending Users</h1>
+<h1 class="page-name">Pending Users</h1>
 
 <div class="user-grid">
     {% if pending_users %}
