--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,6 +9,7 @@
         <script src="/static/javascript/dashboard.js"></script>
         <script src="/static/javascript/add_stuff.js"></script>
         <script src="/static/javascript/submit_limit.js"></script>
+        <script src="/static/javascript/img-size-limit.js"></script>
     </head>
     <body  class="fade">
 
